Fixed view height on mobile.

--- a/app/src/pages/caption-image/caption-image.scss
+++ b/app/src/pages/caption-image/caption-image.scss
@@ -1,9 +1,10 @@
 @import 'components';
 
 :host {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100%;
   display: block;
+  position: relative;
 }
 
 .background {
